2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_set_display_name):
	Don't crash on NULL display name

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-vfs-file.c:
	Remove NautilusFileMountCallback and just make
	NautilusFileOperationCallback take an extra
	resultant file argument.
	
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-error-reporting.c:
        * src/file-manager/fm-list-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to API change
	
        * src/nautilus-pathbar.c:
        (get_display_name_for_folder):
	Fix crash if NULL display name

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
	Set can_mount/unmount to FALSE unless set
	
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-file.h:
	Make the Operation object semi-public
	Move mount ops to virtual functions
	
        * libnautilus-private/nautilus-vfs-file.c:
	Initial work to implement mount op

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
        * src/nautilus-pathbar.c:
        Add & use nautilus_get_desktop_location
	
        * libnautilus-private/nautilus-dnd.c:
	Port code to gio
	
        * libnautilus-private/nautilus-icon-dnd.c:
	Trash is now a real uri location, remove special case

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
	Make compute_title take a GFile

        * libnautilus-private/nautilus-view-factory.[ch]:
        * libnautilus-private/nautilus-window-info.[ch]:
        * src/file-manager/fm-directory-view.c: