@@ -1,3 +1,12 @@
+2007-10-19  Paolo Borelli  <pborelli@katamail.com>
+
+	* libnautilus-private/nautilus-emblem-utils.h:
+	* libnautilus-private/nautilus-emblem-utils.c:
+	* src/nautilus-emblem-sidebar.c:
+	* src/nautilus-property-browser.c:
+
+	Make nautilus_emblem_load_pixbuf_for_emblem take a GFile.
+
 2007-10-19  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file.c:
